add person page

--- a/xichuangzhu/templates/index.html
+++ b/xichuangzhu/templates/index.html
@@ -34,7 +34,7 @@
 
 		{% for review in reviews %}
 		<div class="review-item">
-			<a class="user-avatar" href="#" >
+			<a class="user-avatar" href="{{ url_for('people', user_id=review.UserID) }}" >
 				<img src="{{ review.Avatar }}" />
 			</a>
 
@@ -46,7 +46,7 @@
 				<div class="review-content">{{ review.Content|truncate(38, True) }}</div>
 
 				<div class="review-extra-info">
-					<a href="#">{{ review.Name }}</a>
+					<a href="{{ url_for('people', user_id=review.UserID) }}">{{ review.Name }}</a>
 					评论
 					<a href="{{ url_for('single_work', work_id=review.WorkID) }}">{{ review.WorkTitle }}〔{{ review.Author }}〕</a>
 					{{ review.Time }}
