--- a/xichuangzhu/static/style/page.less
+++ b/xichuangzhu/static/style/page.less
@@ -466,16 +466,47 @@ body{
 //-----------------------------------------------------
 #page-single-review{
 
+	.review-extra-info{
+		margin-bottom: 10px;
+	}
+
 	.user-avatar{
 		float: left;
-		margin-top: 5px;
+		margin-top: 15px;
 	}
 
 	.review-wap{
 		margin-left: 65px;
 
-		.review-extra-info{
-			margin-bottom: 10px;
+		// .review-extra-info{
+		// 	margin-bottom: 10px;
+		// }
+
+		.review-content{
+			margin-bottom: 20px;
+		}
+
+		.comment-item{
+			margin-bottom: 15px;
+			clear: both;
+
+			.comment-user-avatar{
+				float: left;
+				margin-top: 5px;
+			}
+
+			.comment-wap{
+				margin-left: 60px;
+				font-size: 12px;
+
+				.comment-extra-info{
+					line-height: 22px;
+				}
+
+				.comment-body{
+
+				}
+			}
 		}
 	}
 }
@@ -485,6 +516,12 @@ body{
 #page-reviews{
 	.review-item{
 		margin-bottom: 15px;
+
+		// .review-extra-info{
+		// 	font-size: 12px;
+		// 	line-height: 22px;
+		// 	margin-bottom: 20px;
+		// }
 
 		.user-avatar{
 			float: left;
