--- a/xichuangzhu/templates/single_review.html
+++ b/xichuangzhu/templates/single_review.html
@@ -10,24 +10,49 @@
 		{% if session.user_id == review.UserID %}
 		<a class="btn btn-small pull-right" href="{{ url_for('edit_review', review_id=review.ReviewID) }}">编辑 <span class="icon-edit"></span></a>
 		{% endif %}
-
-		<h1 class="review-title">{{ review.Title }}</h1>
-
-		<a href="#" class="user-avatar">
+		
+		<a href="{{ url_for('people', user_id=review.UserID) }}" class="user-avatar">
 			<img src="{{ review.Avatar }}">
 		</a>
 
 		<div class="review-wap">
+			<h1 class="review-title">{{ review.Title }}</h1>
+
 			<div class="review-extra-info">
-				<a href="#">{{ review.Name }}</a>
+				<a href="{{ url_for('people', user_id=review.UserID) }}">{{ review.Name }}</a>
 				评论
 				<a href="{{ url_for('single_work', work_id=review.WorkID) }}">{{ review.WorkTitle }}〔{{ review.Author }}〕</a>
 				{{ review.Time }}
 			</div>
 
-			<div>{{ review.Content|safe }}</div>
-		</div>
+			<div class="review-content">{{ review.Content|safe }}</div>
 
+			<!-- <h2>回复</h2> -->
+
+			{% for comment in comments %}
+			<div class="comment-item clearfix">
+				<a class="comment-user-avatar" href="{{ url_for('people', user_id=comment.UserID) }}">
+					<img src="{{ comment.Avatar }}">
+				</a>
+
+				<div class="comment-wap">
+					<div class="comment-extra-info">
+						<a href="{{ url_for('people', user_id=comment.UserID) }}">{{ comment.Name }}</a>
+						{{ comment.Time }}
+					</div>
+
+					<div class="comment-body">{{ comment.Comment }}</div>
+				</div>
+			</div>
+			{% endfor %}
+
+			<form id="add-review-comment" method="post" action="{{ url_for('add_comment', review_id=review.ReviewID, user_id=session.user_id) }}">
+
+				<textarea name="comment" class="input-xxlarge" rows="4"></textarea>
+
+				<input type="submit" class="btn btn-small" value="提交" />
+			</form>
+		</div>
 		
 	</div>
 
