--- a/xichuangzhu/static/style/page.less
+++ b/xichuangzhu/static/style/page.less
@@ -36,6 +36,11 @@ body{
 			font-size: 12px;
 			line-height: 22px;
 		}
+
+		.tooltip-inner{
+			padding-top: 5px;
+			padding-bottom: 5px;
+		}
 	}
 }
 
@@ -240,7 +245,14 @@ body{
 		line-height: 30px;
 	}
 	.work-type-geci{
-		text-indent: 11em;
+		p{
+			text-indent: 11em;
+			margin-bottom: 7px;
+		}
+
+		.bank{
+			height: 20px;
+		}
 	}
 	.work-type-wen{
 		p{
@@ -575,3 +587,110 @@ body{
 		}
 	}
 }
+
+// page people
+//-----------------------------------------------------
+#page-people{
+	.user-avatar{
+		float: left;
+		margin-top: 15px;
+	}
+
+	.user-info{
+		margin-left: 60px;
+
+		.user-name{
+			font-size: 30px;
+			line-height: 30px;
+			margin-top: 15px;
+			font-weight: bold;
+		}
+
+		.user-signature{
+			font-size: 12px;
+			color: #666;
+		}
+	}
+
+	.work-item{
+		margin-bottom: 15px;
+
+		.work-title{
+			font-size: 16px;
+			line-height: 30px;
+			font-weight: bold;
+		}
+
+		.work-author{
+			font-size: 12px;
+			font-weight: normal;
+
+			a{
+				color: #333;
+			}
+		}
+
+		.work-content{
+			line-height: 22px;
+		}
+	}
+
+	.review-item{
+		margin-bottom: 15px;
+		
+		.review-title{
+			font-size: 16px;
+			font-weight: bold;
+		}
+
+		.review-extra-info{
+			font-size: 12px;
+			line-height: 22px;
+		}
+
+		.review-content{
+			font-size: 12px;
+			line-height: 22px;
+		}
+	}
+}
+
+// page shop
+//-----------------------------------------------------
+#page-shop{
+
+	.products-wap{
+		margin-top: 15px;
+
+		.product-item{
+			float: left;
+			margin: 0 20px 15px 0;
+
+			.product-image{
+				width: 290px;
+
+				img{
+					//border-radius: 2px;
+				}
+				
+			}
+		}
+	}
+}
+
+// page single product
+//-----------------------------------------------------
+#page-single-product{
+	.product-image{
+		margin-top: 15px;
+	}
+
+	.product-name{
+
+	}
+
+	.product-introduction{
+		margin-bottom: 10px;
+	}
+}
+
