--- a/xichuangzhu/static/style/page.less
+++ b/xichuangzhu/static/style/page.less
@@ -214,10 +214,16 @@ body{
 		clear: both;
 	}
 
+	.work-foreword{
+		font-size: 18px;
+		font-family: 'kaiti';
+		margin-bottom: 10px;
+	}
+
 	.work-author{
 		text-align: center;
-		margin-bottom: 20px;
-		padding-right: 6px;
+		margin-bottom: 15px;
+		padding-right: 10px;
 		font-size: 16px;
 	}
 
