--- a/xichuangzhu/templates/author.html
+++ b/xichuangzhu/templates/author.html
@@ -8,7 +8,9 @@
 <script type="text/javascript">
 
 $(document).ready(function(){
-	$('.author a').tooltip();
+	$('.author a').tooltip({
+		'placement': 'right'
+	});
 });
 
 </script>
