--- a/xichuangzhu/templates/add_work.html
+++ b/xichuangzhu/templates/add_work.html
@@ -101,6 +101,13 @@ $(document).ready(function(){
 		</div>
 
 		<div class="control-group">
+			<label class="control-label">小序</label>
+			<div class="controls">
+				<textarea class="input-xxlarge" name="foreword" rows='2'></textarea>
+			</div>
+		</div>
+
+		<div class="control-group">
 			<label class="control-label">题解</label>
 			<div class="controls">
 				<textarea class="input-xxlarge" name="introduction" rows='5'></textarea>
