--- a/xichuangzhu/templates/edit_work.html
+++ b/xichuangzhu/templates/edit_work.html
@@ -122,9 +122,16 @@ $(document).ready(function(){
 		</div>
 
 		<div class="control-group">
+			<label class="control-label">小序</label>
+			<div class="controls">
+				<textarea class="input-xxlarge" name="foreword" rows='2'>{{ work.Foreword }}</textarea>
+			</div>
+		</div>
+
+		<div class="control-group">
 			<label class="control-label">题解</label>
 			<div class="controls">
-				<textarea class="input-xxlarge" name="introduction" rows='5'>{{ work.Introduction }}</textarea>
+				<textarea class="input-xxlarge" name="introduction" rows='5'>{{ work.WorkIntroduction }}</textarea>
 			</div>
 		</div>
 
