--- a/xichuangzhu/static/style/page.less
+++ b/xichuangzhu/static/style/page.less
@@ -667,13 +667,14 @@ body{
 
 	.products-wap{
 		margin-top: 15px;
+		position: relative;
 
 		.product-item{
-			float: left;
-			margin: 0 20px 15px 0;
+			//float: left;
+			//margin: 0 20px 15px 0;
 
 			.product-image{
-				width: 290px;
+				//width: 290px;
 
 				img{
 					//border-radius: 2px;
