--- a/xichuangzhu/templates/layout.html
+++ b/xichuangzhu/templates/layout.html
@@ -21,7 +21,7 @@
 						<li><a href="{{ url_for('index') }}">首页</a></li>
 						<li><a href="{{ url_for('my_love') }}">收藏</a></li>
 						<!-- <li><a href="#">论坛</a></li> -->
-						<li><a href="{{ url_for('shop') }}">店铺</a></li>
+						<li><a href="{{ url_for('shop') }}">物</a></li>
 					</ul>
 
 					<!-- search -->
