fix a bug when using session by a unknown user

--- a/xichuangzhu/templates/people.html
+++ b/xichuangzhu/templates/people.html
@@ -17,7 +17,7 @@
 			<div class="user-signature">{{ people.Signature }}</div>
 		</div>
 		
-		<h2>收藏</h2>
+		<h2>TA的收藏</h2>
 
 		{% for work in works %}
 		<div class="work-item">
@@ -29,7 +29,7 @@
 		</div>
 		{% endfor %}
 
-		<h2>TA 的点评</h2>
+		<h2>TA的点评</h2>
 
 		{% for review in reviews %}
 		<div class="review-item">
