--- a/xichuangzhu/templates/single_work.html
+++ b/xichuangzhu/templates/single_work.html
@@ -9,7 +9,7 @@
 
 $(document).ready(function(){
 	$('.work-content sup').tooltip({
-		'placement': 'right'
+		//'placement': 'right'
 	});
 
 	$('.work-content sup').each(function(index){
