--- a/xichuangzhu/static/style/page.less
+++ b/xichuangzhu/static/style/page.less
@@ -214,24 +214,23 @@ body{
 		clear: both;
 	}
 
+	.work-author{
+		text-align: center;
+		margin-bottom: 16px;
+		padding-right: 10px;
+		font-size: 16px;
+	}
+
 	.work-foreword{
 		font-size: 18px;
 		font-family: 'kaiti';
 		margin-bottom: 10px;
 	}
 
-	.work-author{
-		text-align: center;
-		margin-bottom: 15px;
-		padding-right: 10px;
-		font-size: 16px;
-	}
-
 	.work-content{
 		font-family: '仿宋_GB2312';
 		font-weight: bold;	
 		margin-bottom: 30px;
-		//font-size: 18px;
 		font-size: 14pt;
 
 		sup{
@@ -245,6 +244,8 @@ body{
 	}
 	.work-type-shi{
 		text-align: center;
+		p{
+		}
 	}
 	.work-type-ci{
 		text-indent: 2em;
@@ -670,16 +671,13 @@ body{
 		position: relative;
 
 		.product-item{
-			//float: left;
-			//margin: 0 20px 15px 0;
 
 			.product-image{
-				//width: 290px;
+				opacity: 0.9;
 
-				img{
-					//border-radius: 2px;
+				&:hover{
+					opacity: 1;
 				}
-				
 			}
 		}
 	}
