--- a/xichuangzhu/static/style/page.less
+++ b/xichuangzhu/static/style/page.less
@@ -15,18 +15,26 @@ body{
 		h1{
 			font-size: 25px;
 			line-height: 25px;
-			font-weight: bold;
 			margin: 15px 0 12px 0;
 		}
 
 		h2{
-			font-size: 18px;
-			line-height: 18px;
+			font-size: 16px;
+			line-height: 16px;
 			font-family: '微软雅黑';
 			font-weight: normal;
 			margin: 20px 0 15px 0;
 			color: darkred;
 			clear: both;
+
+			.link-more{
+				a{
+					margin-left: 5px;
+					font-size: 12px;
+					font-family: '微软雅黑';
+					font-weight: normal;
+				}
+			}
 		}
 
 		.tooltip{
@@ -55,14 +63,6 @@ body{
 	font-size: 12px;
 	font-family: '微软雅黑';
 	margin:20px 0 10px 0;
-}
-
-.link-more{
-	a{
-		margin-left: 5px;
-		font-size: 12px;
-		font-family: '微软雅黑';
-	}
 }
 
 // fix bootstrap css
@@ -228,10 +228,11 @@ body{
 	}
 
 	.work-content{
-		font-family: '仿宋_GB2312';
-		font-weight: bold;	
+		font-family: 'fangsong', '仿宋_GB2312';
+		font-weight: bold;
 		margin-bottom: 30px;
 		font-size: 14pt;
+		text-shadow: 0 0 1px #DDD;
 
 		sup{
 			font-family: 'yahei';
