--- a/xichuangzhu/templates/shop.html
+++ b/xichuangzhu/templates/shop.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block page_title %}店铺{% endblock %}
+{% block page_title %}物{% endblock %}
 {% block page_id%}page-shop{% endblock %}
 
 {% block body %}
