--- a/xichuangzhu/templates/layout.html
+++ b/xichuangzhu/templates/layout.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>{% block page_title %}西窗烛{% endblock %}</title>
+		<link rel="Shortcut Icon" href="{{ url_for('static', filename='img/xichuangzhu.ico') }}">
 		<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='style/bootstrap.min.css') }}">
 		<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='style/page.css') }}">
 		<script type="text/javascript" src="{{ url_for('static', filename='js/jquery-1.9.0.min.js')}}"></script>
@@ -13,25 +14,23 @@
 		<div class="navbar navbar-fixed-top">
 			<div class="navbar-inner">
 				<div class="container">
-					<!-- logo -->
 					<a class="brand" href="{{ url_for('index') }}">西窗烛</a>
 
-					<!-- nav -->
 					<ul class="nav">
 						<li><a href="{{ url_for('index') }}">首页</a></li>
+						{% if session.user_id %}
 						<li><a href="{{ url_for('my_love') }}">收藏</a></li>
+						{% endif %}
 						<!-- <li><a href="#">论坛</a></li> -->
 						<li><a href="{{ url_for('shop') }}">物</a></li>
 					</ul>
 
-					<!-- search -->
 					<form class="navbar-search">
 						<input type="text" class="search-query" placeholder="作品 / 文学家">
 					</form>
 					
 					{% if session.user_id %}
 
-					<!-- user info -->
 					<ul class="nav pull-right">
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -45,7 +44,6 @@
 					</ul>
 
 					{% if session.user_id == 45197381 %}
-					<!-- add -->
 					<ul class="nav pull-right">
 						<li class="dropdown">
 							<a class="dropdown-toggle" data-toggle="dropdown" href="#">
