change font style

--- a/xichuangzhu/static/style/page.less
+++ b/xichuangzhu/static/style/page.less
@@ -228,14 +228,19 @@ body{
 	}
 
 	.work-content{
-		font-family: 'fangsong', '仿宋_GB2312';
-		font-weight: bold;
+		//font-family: 'fangsong', '仿宋_GB2312';
+		//font-weight: bold;
+		//font-size: 14pt;
+		//text-shadow: 0 0 1px #DDD;
+
+		font-family: '宋体';
+		font-size: 17px;
+		//olor: black;
+
 		margin-bottom: 30px;
-		font-size: 14pt;
-		text-shadow: 0 0 1px #DDD;
 
 		sup{
-			font-family: 'yahei';
+			font-family: '黑体';
 			font-size: 12px;
 			font-weight: normal;
 			padding: 5px 0px;
@@ -251,11 +256,13 @@ body{
 	.work-type-ci{
 		text-indent: 2em;
 		line-height: 30px;
+		padding: 0 2em;
 	}
 	.work-type-geci{
 		p{
-			text-indent: 11em;
-			margin-bottom: 7px;
+			text-indent: 13em;
+			margin-bottom: 6px;
+			line-height: 24px;
 		}
 
 		.bank{
