--- a/xichuangzhu/static/style/page.css
+++ b/xichuangzhu/static/style/page.css
@@ -23,10 +23,10 @@ body #main-wap .tooltip-inner{padding-top:5px;padding-bottom:5px;}
 #page-single-work .work-title{font-size:25px;line-height:35px;margin-top:30px;margin-bottom:12px;font-weight:bold;text-align:center;clear:both;}
 #page-single-work .work-author{text-align:center;margin-bottom:16px;padding-right:10px;font-size:16px;}
 #page-single-work .work-foreword{font-size:18px;font-family:'kaiti';margin-bottom:10px;}
-#page-single-work .work-content{font-family:'fangsong','仿宋_GB2312';font-weight:bold;margin-bottom:30px;font-size:14pt;text-shadow:0 0 1px #DDD;}#page-single-work .work-content sup{font-family:'yahei';font-size:12px;font-weight:normal;padding:5px 0px;cursor:pointer;color:#666;}
+#page-single-work .work-content{font-family:'宋体';font-size:17px;margin-bottom:30px;}#page-single-work .work-content sup{font-family:'黑体';font-size:12px;font-weight:normal;padding:5px 0px;cursor:pointer;color:#666;}
 #page-single-work .work-type-shi{text-align:center;}
-#page-single-work .work-type-ci{text-indent:2em;line-height:30px;}
-#page-single-work .work-type-geci p{text-indent:11em;margin-bottom:7px;}
+#page-single-work .work-type-ci{text-indent:2em;line-height:30px;padding:0 2em;}
+#page-single-work .work-type-geci p{text-indent:13em;margin-bottom:6px;line-height:24px;}
 #page-single-work .work-type-geci .bank{height:20px;}
 #page-single-work .work-type-wen p{text-indent:2em;line-height:30px;margin-bottom:18px;}
 #page-single-work .work-collection{font-weight:bold;font-size:16px;margin-bottom:5px;}
