add timeline for dynasties

--- a/xichuangzhu/static/style/page.less
+++ b/xichuangzhu/static/style/page.less
@@ -434,6 +434,32 @@ body{
 // page dynasty
 //-----------------------------------------------------
 #page-dynasty{
+
+	#dyn-selector{
+		margin: 0;
+		position: fixed;
+		top: 40px;
+		left: 0px;
+		list-style: none;
+
+		li{
+			float: left;
+
+			a{
+				height: 10px;
+				display: block;
+				background-color: black;
+				//margin-right: 1px;
+				//box-sizing: border-box;
+				//border-left: 1px solid white;
+
+				&:hover{
+					background-color: gray;
+				}
+			}
+		}
+	}
+
 	.dynasty-item{
 		margin-bottom: 15px;
 		
